<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sapper</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nMines">Введите количество мин</string>
    <string name="playWithFlags">Играть с флажками</string>
    <string name="playWithoutFlags">Сразу помечать мины</string>
    <string name="side">Сторона поля</string>
    <string name="title_activity_play_with_flags">PlayWithFlags</string>
    <string name="title_activity_parent">ParentActivity</string>
    <string name="title_activity_play_without_flags">PlayWithoutFlags</string>
    <string name="title_activity_results">Результаты</string>
    <string name="title_all">Все результаты</string>
    <string name="title_res">Количество побед выигравших хоть раз игроков</string>
    <string name="name">Имя игрока</string>
    <string name="wins">Количество побед</string>
    <string name="flags">С флажками</string>
    <string name="win">Выиграл</string>

</resources>
