<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >
    
    <TableRow>
	    <TextView
		    android:layout_width="75dp"
	        android:layout_height="20dp"
            android:background="#88FF00FF"
	        android:id="@+id/textView01"
	        android:text="@string/name" />
	
	    <TextView
            android:layout_width="85dp"
	        android:layout_height="20dp"
            android:background="#88FF00FF"
	        android:id="@+id/textView02"
	        android:text="@string/flags" />
	    
	    <TextView	        
	        android:layout_width="65dp"
	        android:layout_height="20dp"
	        android:background="#88FF00FF"
	        android:id="@+id/textView03"
	        android:text = "@string/win" />
	    
	    <TextView	        
	        android:layout_width="95dp"
	        android:layout_height="20dp"
            android:background="#88FF00FF"
	        android:id="@+id/textView04"
	        android:text = "@string/side" />
    </TableRow>
	    <ListView
	        android:id="@+id/listView"
	        android:layout_alignParentLeft="true" >
	    </ListView>
</TableLayout>
